# agents-skills

./: .gitignore  .gitleaks.toml  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  install.sh  lefthook.yml  rustfmt.toml  skills-lock.json
.evals/harden-bash/: evals.json
agent-harness-audit/: SKILL.md
agent-harness-audit/references/: audit-grid.md  inventory-commands.md  kitsmith-context-strategy.md  report-template.md  source-corpus.md  terminology.md
ascii-diagram-builder-cc/: SKILL.md
ascii-diagram-builder-cc/references/: worked-example.md
ascii-diagram-builder-cc/scripts/: box-helpers.ts
batch-update/: SKILL.md
batch-update/agents/: openai.yaml
batch-update/references/: ecosystems.md  research-brief.md  risk-classification.md  run-artifact-template.md  workflow.md
bun-cc/: SKILL.md
bun-cc/examples/: tsconfig.base.json
bun-cc/references/: bun-api.md  bundler.md  crypto.md  http-server.md  patterns.md  sqlite.md  testing.md
bun-cc/scripts/: probe-bun-mcp.sh
codex-orchestrate/: SKILL.md
content-architect/: SKILL.md
content-architect/evals/: evals.json
content-architect/references/: app-web.md  blueprint-template.md  cli-frontend.md  principles.md  refonte.md  site-vitrine.md
council/: SKILL.md
council/agents/: openai.yaml
crates/hyprpilot/: Cargo.toml  README.md
crates/hyprpilot/fixtures/: clients.json  devices.json  monitors.json
crates/hyprpilot/src/: capture.rs  cli.rs  error.rs  hypr.rs  keys.rs  main.rs  pointer.rs  session.rs
crates/skills-tools/: Cargo.toml
deepen-codebase-architecture/: SKILL.md
deepen-codebase-architecture/references/: issue-template.md  (+1 more)
design-system-creator/: SKILL.md
deterministic-driver/: SKILL.md
docs/: promptify-maintenance.md
docs-drift/: SKILL.md
effect-language-service-cc/: SKILL.md
effect-usage-cc/: SKILL.md
goalify/: README.md  SKILL.md
handoff-prompt/: SKILL.md
harden-bash/: SKILL.md
humanizer/: _meta.json
hyprpilot/: SKILL.md
intent-to-workflow/: .gitignore  HUMANS.md  SKILL.md  pyproject.toml
intent-to-workflow/agents/: openai.yaml
intent-to-workflow/references/: hook.md
intent-to-workflow/scripts/: itw  itw.ps1  setup  setup.ps1
intent-to-workflow/src/intent_to_workflow/: __init__.py  cli.py  core.py  hook.py
intent-to-workflow/src/intent_to_workflow/agents/codex/: config.example.toml  itw-contract-reviewer.toml  itw-security-reviewer.toml  itw-simplification-reviewer.toml  itw-worker.toml
intent-to-workflow/src/intent_to_workflow/references/: artifacts.md  grill.md  issues.md  issues_review.md  prd.md  prd_review.md  tdd.md  workflow_types.md
intent-to-workflow/src/intent_to_workflow/templates/: clarification.md  issues.md  issues_review.md  prd.md  prd_review.md  workflow.md  workflow_ready.md  workflow_review.md
intent-to-workflow/tests/: test_cli.py
interactive-unslop/: SKILL.md
looper/: README.md  SKILL.md
of/: SKILL.md
orchestration-planner/: SKILL.md  pyproject.toml
orchestration-planner/references/: artifact-contract.md  hook.md  phase-contract.md
orchestration-planner/src/orchestration_planner/: __init__.py  cli.py  core.py  hook.py
orchestration-planner/tests/: test_cli.py
polisher/: SKILL.md
pr-review-html/: SKILL.md
premium-handoff/: SKILL.md
promptify/: SKILL.md
rekooh-cc/: PRD.md  SKILL.md
rust-craft/: SKILL.md
scripts/: check-rust.sh  publish-live
second-brain/: SKILL.md
shrinkify/: SKILL.md
skill-eval-methodology/: SKILL.md
skill-sync/: SKILL.md
skills-maintenance/: SKILL.md
slice-runner/: SKILL.md
slop-detector/: DESIGN.md  SKILL.md  evals.json  voice-profile-template.md
state-machine/: SKILL.md
swarm-research/: SKILL.md
targetify/: SKILL.md
teach-back/: SKILL.md
(+322 files in other folders)
