[workspace]
members = ["crates/skills-tools"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
implicit_clone = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"
allow_attributes = "warn"
missing_const_for_fn = "allow"
