[package]
name = "hyprpilot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
